--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div class="row justify-content-center">
             <div class="col-auto">
               <ul
-                class="list-group list-group-flush list-group-horizontal mb-2"
+                class="list-group list-group-flush mb-2"
               >
                 <li
                   class="
@@ -137,7 +137,7 @@
           <div class="row justify-content-center">
             <div class="col-auto">
               <ul
-                class="list-group list-group-flush list-group-horizontal mb-2"
+                class="list-group list-group-flush mb-2"
               >
                 <li
                   class="
@@ -160,7 +160,7 @@
           <div class="row justify-content-center">
             <div class="col-auto">
               <ul
-                class="list-group list-group-flush list-group-horizontal mb-2"
+                class="list-group list-group-flush mb-2"
               >
                 <li
                   class="
